=== x.x.x / 2009-xx-xx

* Fixed bug in fql_query when result set is empty [Alan Larkin]
* Modified fql_query to return results as Hashes as a last resort [Alan Larkin]
* fixed typo in set app properties parser [Andrew Grim, shane]
* Removed actor_id param from templatized feed [shane]
* Added admin.get_allocation [shane]
* Added data.get_cookies and data.set_cookie [shane]
* Added admin.get_app_properties and admin.set_app_properties [shane]

=== 0.9.9 / 2008-09-08

* Re-package as gem after reworking for new API


=== 0.9.5 / 2008-02-13

* Next release of documentation